# whiteout-survival-bot

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  deploy.sh  docker-compose.yml  docker-stack.yml  main.py  pyproject.toml  requirements.txt
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  platform_support.md  translation.md
applications/v1/core/: log_collector.py  log_processor.py  message_queue.py  service_discovery.py  ticket_system.py
applications/v1/routers/: admin.py  health.py  service_admin.py  services.py  tickets.py
applications/v1/static/admin/: dashboard.js
applications/v1/templates/admin/: dashboard.html
configs/: prometheus.yml  settings.py
docs/: API_GATEWAY.md  ARCHITECTURE.md  DEPLOYMENT.md
